# dgeohistogram

./:   .cproject  .gitignore  .project  Makefile  README.md  alertas.qix  alertas.shx  avglimit.c  avglimit.h  catalogo de metodos uteis  charminar.dbf  charminar.shp  charminar.shx  consulta.txt  data.csv  dataset.c  dataset_specs.c  dataset_specs.h  dgeohistogram.asta  ehist.c  ehist.h  ehist_intermed.c  eulerskew.c  eulerskew.c.save  eulerskew.h  gnuplot.gpi  hidrografia.shx  histComp  histComp.c  histogram.c  histogram.h  join  join.c  main  main.c  minskew.c  minskew.h  municipios.shx  outfile  (+13 more)
Debug/: Euler  (+11 more)
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/experiments/: wquery  wquery.cpp  wquery.exp
cpp/include/: Dataset.hpp  DequeBinarySearchPoint.hpp  Envelope.hpp  GenericExperiment.hpp  Property.hpp  RandomWQueryExperiment.hpp  SimpleEnvelopeRTree.hpp  SpatialGridHistogram.hpp  SpatialGridHistogramCellTypes.hpp  SpatialGridHistogramEuler.hpp  SpatialGridHistogramIHWAF.hpp  SpatialGridHistogramMP.hpp  SpatialHistogram.hpp  SpatialHistogramAB.hpp  SpatialHistogramCellTypes.hpp  SpatialHistogramEulerskew.hpp  SpatialHistogramMinskew.hpp  UniformWQueryExperiment.hpp  externdebugqry.h
cpp/rtree/: ogrext.c  ogrext.h  rtree-lazy.c  rtree-reinsert.c  rtree-reinsert.h  rtree-star.c  rtree-star.h  rtree-wquery.c  rtree.c  rtree.h  utils.c  utils.h
cpp/src/: Dataset.cpp  SpatialGridHistogram.cpp  SpatialGridHistogramEuler.cpp  SpatialGridHistogramIHWAF.cpp  SpatialGridHistogramMP.cpp  SpatialHistogramAB.cpp  SpatialHistogramEulerskew.cpp  SpatialHistogramMinskew.cpp
(+129 files in other folders)
